<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.menu_contactos">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/tbToolbar4"
            layout="@layout/toolbar"/>

        <EditText
            android:id="@+id/tbNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/etNombre"
            android:layout_below="@+id/tbToolbar4"
            android:layout_marginTop="@dimen/tbNombre"
            android:layout_centerHorizontal="true"/>
        <EditText
            android:id="@+id/tbEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tbNombre"
            android:layout_marginTop="@dimen/tbEmail"
            android:hint="@string/etEmail"
            android:inputType="textEmailAddress"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/tbMensaaje"
            android:layout_below="@+id/tbEmail"
            android:hint="@string/etMensaje"
            android:id="@+id/etMensaje"
            android:layout_marginTop="@dimen/tbMenaje"/>


        <Button
            android:id="@+id/etEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etMensaje"
            android:text="@string/etEnviar"/>


    </RelativeLayout>





</androidx.constraintlayout.widget.ConstraintLayout>